# jgLedCube

./: .travis.yml  CMakeLists.txt  README.md  rezenv.sh
_jgLedCube_old/: CMakeLists.txt
_jgLedCube_old/common/: serial.cpp  serial_desktop.cpp
_jgLedCube_old/common/tests/: CMakeLists.txt  test_serial.cpp
_jgLedCube_old/desktop/: CMakeLists.txt
_jgLedCube_old/desktop/tests/: CMakeLists.txt
_jgLedCube_old/embedded/: CMakeLists.txt  core.h
_jgLedCube_old/embedded/anim/: CMakeLists.txt
_jgLedCube_old/embedded/stm32/debug/: CMakeLists.txt
_jgLedCube_old/embedded/tests/: test_core.cpp
cmake/: SetupProject.cmake  dependencies.cmake  toolchain.cmake
cmake/arduino_toolchain/: ArduinoToolchain.cmake
cmake/arduino_toolchain/Platform/: Arduino.cmake
debug/: super_verbose_output.txt  verbose_output.txt
hardware/blender/: led_jig.blend1  panel_jig.blend  panel_jig.blend1
hardware/docs/high_side_switch_rnd/: README.md
hardware/jig/: led_jig.blend
hardware/kicad/column_control/: column_control.kicad_pcb  column_control.lst  column_control.pro
hardware/kicad/column_control/gerber/: column_control.gbo  column_control.gtl  column_control.gto  column_control.gts
hardware/kicad/level_control/: level_control.kicad_pcb
hardware/kicad/level_control/gerber/: level_control.gbl  level_control.gbo  level_control.gbs  level_control.gto  level_control.xln
hardware/pcb/column_control/v001/: column_control-cache.lib  column_control.net  column_control.sch  column_control.wrl  column_control.xml
hardware/pcb/column_control/v001/gerber/: column_control.gbl  column_control.gbs  column_control.gko  column_control.xln
hardware/pcb/high_side_switch_array/: _saved_bjt_switch.sch  bjt_switch.bak  bjt_switch.sch  ic_logic.bak  ic_logic.sch  switch_array-cache.lib  switch_array.bak  switch_array.kicad_pcb  switch_array.kicad_pcb-bak  switch_array.net  switch_array.pro  switch_array.sch
hardware/pcb/level_control/v001/: level_control-cache.lib  level_control.net  level_control.pro  level_control.sch
hardware/pcb/level_control/v001/gerber/: level_control.gko  level_control.gtl  level_control.gts
jgLedCube/: CMakeLists.txt  README.md  catch_test.cpp  core.cpp  core.h  defines.h  gtest.cpp  serial.cpp  serial.h  serial_pc.cpp  test.cpp
jgLedCube/anim/: CMakeLists.txt  _template.h  debug.cpp  debug.h  fade.cpp  fade.h  sweep.cpp  sweep.h
jgLedCube/arduino/: CMakeLists.txt  debug.cpp
jgLedCube/common/: CMakeLists.txt  defines.h  serial.cpp  serial.h  serial_desktop.cpp  wrap_serial.cpp
jgLedCube/common/tests/: CMakeLists.txt  catch_test_serial.cpp  gtest_serial.cpp  test_serial.cpp
jgLedCube/controllers/: CMakeLists.txt
jgLedCube/controllers/common/: CMakeLists.txt
jgLedCube/controllers/common/desktop/: CMakeLists.txt  cube.cpp  cube.h  cubes.cpp  cubes.h  serial.cpp  serial.h  typedefs.h
jgLedCube/controllers/common/embedded/: CMakeLists.txt
jgLedCube/controllers/ledCubeTray/: CMakeLists.txt  main.cpp
jgLedCube/controllers/ledCubeTray/helpers/: Cube.cpp  Cube.h  systemMonitor.cpp  systemMonitor.h
jgLedCube/controllers/ledCubeTray/ui/: gen_ui.sh  ledCubeTray.cpp  ledCubeTray.h  ledCubeTrayUi.h  ledCubeTrayUi.ui  systemMonitorUi.h  systemMonitorUi.ui
jgLedCube/cubes/: CMakeLists.txt  core.cpp  core.h  defines.h  serial.cpp
jgLedCube/cubes/anim/: CMakeLists.txt  README.md  debug.cpp  debug.h  fade.cpp  sweep.cpp
jgLedCube/cubes/arduino/: debug.cpp
jgLedCube/cubes/tests/: CMakeLists.txt  test_anim.cpp  test_core.cpp
jgLedCube/desktop/: serial.h
jgLedCube/embedded/: CMakeLists.txt  core.cpp  core.h  core_desktop.cpp  defines.h  serial.cpp  serial.h
jgLedCube/embedded/anim/: CMakeLists.txt  debug.cpp  fade.cpp  sweep.cpp  sweep.h
jgLedCube/embedded/arduino/: anims.cpp
jgLedCube/embedded/tests/: CMakeLists.txt  test.cpp  test_anim.cpp  test_core.cpp
jgLedCube/pc/: CMakeLists.txt  test.cpp  test_anim.cpp  test_core.cpp  test_serial.cpp
jgLedCube/python/: CMakeLists.txt  __init__.py  test.py  wrap_serial.cpp
jgLedCube/stm32/: CMakeLists.txt
jgLedCube/stm32/debug/: CMakeLists.txt  main.cpp  stm32f4xx_hal_conf.h
jgLedCube/test/: CMakeLists.txt  test.cpp
ledcube/: anim.h  core.cpp  core.h  serial.h  test.cpp
ledcube/arduino/: blink.cpp
ledcube/opengl/: blink.cpp
ledcube/stm32/: blink.cpp
scripts/: install_desktop_deps.sh  install_embedded_deps.sh  travis.sh
