add_subdirectory(common)
add_subdirectory(controllers)

if (${CUBE_TARGET_PLATFORM} STREQUAL desktop)
    get_property(TEST_SOURCES GLOBAL PROPERTY TEST_SOURCES)
    get_property(TEST_LIBS GLOBAL PROPERTY TEST_LIBS)
    add_executable(desktop_tests test.cpp ${TEST_SOURCES})
    target_link_libraries(desktop_tests -pthread ${GTEST_LIBRARY} ${TEST_LIBS})
else()
    add_subdirectory(cubes)
endif()
